--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ github_username: bschne
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -53,3 +54,6 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+paginate: 10
+paginate_path: "/archive/page:num/"
