Minor project fixes

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,7 +4,7 @@
   link: https://x.com/jhaushofer/status/1483667178234990592
 - title: HackZurich
   timeframe: "2018–2023"
-  description: Helped organize one of Europe's largest hackathons, uniting 500–1','200 participants annually to develop innovative tech solutions.
+  description: Helped organize one of Europe's largest hackathons, uniting 500–1'200 participants annually to develop innovative tech solutions.
   link: https://hackzurich.com
 - title: Digital Festival Zurich
   timeframe: "2018–2023"
@@ -12,6 +12,6 @@
   link: https://digitalfestival.ch
 - title: TICKETINO
   timeframe: "2014–2018"
-  description: Led software engineering and product for a ticketing platform, rebuilt the online shop, and delivered registartion &amp; ticket sales solutions for large business- and public events.
+  description: Led software engineering and product for a ticketing platform, including a ground-up rebuild of the online shop, and delivered registration &amp; ticket sales solutions for large business- and public events.
   link: https://ticketino.com/
 # Add more projects below following the same structure 
